--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -380,4 +380,9 @@ Add a comment to this line
     <!-- Whether to post reset runnable for all clients. Needed for some older
         vendor fingerprint HAL implementations. -->
     <bool name="config_fingerprintPostResetRunnableForAllClients">true</bool>
+    <integer name="config_deviceHardwareWakeKeys">65</integer>
+    <integer name="config_deviceHardwareKeys">83</integer>
+    <integer name="config_deviceSupportsButtonBrightnessControl">1</integer>
+    <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/battery/hv_charger_status</string>
+    <string name="config_oemFastChargerStatusValue" translatable="false">1</string>
 </resources>
